<resources>
    <string name="app_name">Staatsoper Livestreaming</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="live">Live</string>
    <string name="videotheque">Videotheque</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="empty_list">It seems that VOD list is empty ATM</string>
    <string name="app_list_default_item">BASE</string>
    <string name="app_list_base_item">BASE</string>
    <string name="app_list_video_view_item">VIDEO VIEW</string>
    <string name="app_list_video_view_media_drm_item">MEDIA DRM WITH VIDEO VIEW</string>
    <string name="app_list_stream_downloader_item">STREAM DOWNLOADER</string>
    <string name="app_list_video_ofoff_item">VIDEO ON OFF</string>
    <string name="app_list_simplesample_item">SIMGPLE SAMPLE</string>
    <string name="app_list_fd_item">FD Sample</string>
    <string name="multi_stream">Multi Stream</string>
    <string name="scale_mode">Scale Mode</string>
    <string name="band_width">Band Width</string>
    <string name="min_max_band_width">Min/Max Band Width</string>
    <string name="volume">Volume</string>
    <string name="caption_style">Caption Style</string>
    <string name="statistics">Statistic</string>
    <string name="dolby_ac3_sound">Dolby AC3 Sound</string>
    <string name="dolby_ac4_sound">Dolby AC4 Sound</string>
    <string name="select_language">Select Language</string>
    <string name="change_subtitle">Change Subtitle</string>
    <string name="dummy_test">Dummy</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="download_sw_codec">Start SW codec download</string>
    <string name="delete_sw_codec">Delete downloaded Codecs</string>
    <string name="scale_mode_fit">Fit to screen</string>
    <string name="scale_mode_full">Stretch to fullscreen</string>
    <string name="scale_mode_original">Original size</string>
    <string name="multi_track_title">Multi Stream</string>
    <string name="multi_track_audio">Audio</string>
    <string name="multi_track_video">Video</string>
    <string name="multi_track_text">Text</string>
    <string name="multi_track_custom">Custom Attr</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="tab_host_item_webview">WebView</string>
    <string name="tab_host_item_Local">Local</string>
    <string name="tab_host_item_Streaming">Streaming</string>
    <string name="tab_host_item_OfflinePlayback">Offline\nPlayback</string>
    <string name="tab_host_item_preload_nxb">Preload\nNxb</string>
    <string name="menu_audio_on">Audio On</string>
    <string name="menu_audio_off">Audio Off</string>
    <string name="menu_video_on">Video On</string>
    <string name="menu_video_off">Video Off</string>
    <string name="menu_text_on">Text On</string>
    <string name="menu_text_off">Text Off</string>
    <string-array name="visible_extension_list">
        <item>asf</item>
        <item>mp4</item>
        <item>mp3</item>
        <item>avi</item>
        <item>3gp</item>
        <item>3g2</item>
        <item>aac</item>
        <item>wmv</item>
        <item>ogg</item>
        <item>egg</item>
        <item>webm</item>
        <item>ismv</item>
        <item>wma</item>
        <item>mkv</item>
        <item>amr</item>
        <item>ts</item>
        <item>uvu</item>
        <item>vob</item>
        <item>mpg</item>
        <item>flac</item>
        <item>flv</item>
        <item>nxt</item>
        <item>divx</item>
        <item>f4v</item>
        <item>skm</item>
        <item>k3g</item>
        <item>mov</item>
        <item>ogm</item>
        <item>ogv</item>
        <item>au</item>
        <item>mka</item>
        <item>wav</item>
        <item>qcp</item>
        <item>ac3</item>
        <item>ac4</item>
        <item>m4a</item>
        <item>nxb.txt</item>
        <item>nxb</item>
    </string-array>
    <string-array name="playable_extension_list">
        <item>asf</item>
        <item>mp4</item>
        <item>mp3</item>
        <item>avi</item>
        <item>mkv</item>
        <item>3gp</item>
        <item>3g2</item>
        <item>aac</item>
        <item>wmv</item>
        <item>ogg</item>
        <item>egg</item>
        <item>webm</item>
        <item>ismv</item>
        <item>wma</item>
        <item>amr</item>
        <item>ts</item>
        <item>uvu</item>
        <item>vob</item>
        <item>mpg</item>
        <item>nxt</item>
        <item>divx</item>
        <item>f4v</item>
        <item>skm</item>
        <item>k3g</item>
        <item>mov</item>
        <item>ogm</item>
        <item>ogv</item>
        <item>au</item>
        <item>mka</item>
        <item>wav</item>
        <item>qcp</item>
        <item>ac3</item>
        <item>ac4</item>
        <item>m4a</item>
        <item>nex.store</item>
    </string-array>
    <string name="start_log">Start Log</string>
    <string name="stop_log">Stop Log</string>
    <string name="url">URL</string>
    <string name="no_files">There are no streaming historys to display.</string>
    <string name="no_cache">There are no caches to display.</string>
    <string name="no_subtitle">There are no subtitles to display.</string>
    <string name="go_url">Go To URL</string>
    <string name="clear_cache">Clear Cache Data</string>
    <string name="url_detail"> "Enter the URL"</string>
    <string name="play"> PLAY </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="invalid_subtitle_path">Invalid subtitle path!</string>
    <string name="go_to_url_drm_error">Only one drm available.</string>
    <string name="go_to_url_error">Please enter url into the edit text.</string>
    <string name="module">Module</string>
    <string name="target_bandwidth">Target BandWidth</string>
    <string name="pref_debug_codec_title">Codec Log</string>
    <string name="pref_debug_codec_key">codecLog</string>
    <string name="pref_debug_renderer_title">Renderer Log</string>
    <string name="pref_debug_renderer_key">rendererLog</string>
    <string name="pref_debug_protocol_title">Protocol Log</string>
    <string name="pref_debug_protocol_logs_debug_title">DEBUG</string>
    <string name="pref_debug_protocol_logs_rtp_title">RTP</string>
    <string name="pref_debug_protocol_logs_rtcp_title">RTCP</string>
    <string name="pref_debug_protocol_logs_frame_title">FRAME</string>
    <string name="pref_start_nearest_bw_title">Start Nearest BW</string>
    <string name="pref_start_nearest_bw_key">startNearestBW</string>
    <string name="pref_start_sec_key">startSec</string>
    <string name="pref_start_sec_title">Start Seconds</string>
    <string name="pref_useUDP">Use UDP for streaming</string>
    <string name="pref_useUDP_desc">Uses UDP when streaming (if this is off, TCP is used)</string>
    <string name="pref_useUDP_off">TCP will be used</string>
    <string name="pref_useUDP_on">UDP will be used</string>
    <string name="pref_enableAudioOnlyTrack_title">Enable Audio Only Track</string>
    <string name="pref_enableAudioOnlyTrack_key">enableAOnlyTrack</string>
    <string name="pref_enableAudioOnlyTrack_off">Disable Audio Only Track</string>
    <string name="pref_enableAudioOnlyTrack_on">Enable Audio Only Track</string>
    <string name="pref_trackdownEnable_key">trackdownEnable</string>
    <string name="pref_trackdownEnable">Trackdown</string>
    <string name="pref_trackdownEnable_desc">Switches to a lower bandwidth track if the resolution or bitrate of the current track is too high for the device to play smoothly</string>
    <string name="pref_trackdownEnable_off">Trackdown is disabled</string>
    <string name="pref_trackdownEnable_on">Trackdown is enabled</string>
    <string name="pref_trackdownThreshold_key">trackdownThreshold</string>
    <string name="pref_max_bandwidth_key">maxBandwidth</string>
    <string name="pref_max_bandwidth_title">Max BW</string>
    <string name="pref_min_bandwidth_key">minBandwidth</string>
    <string name="pref_min_bandwidth_title">Min BW</string>
    <string name="pref_eyePleaser">Eye-Pleaser</string>
    <string name="pref_eyePleaser_desc">Uses Eye-Pleaser</string>
    <string name="pref_eyePleaser_off">Eye-Pleaser OFF</string>
    <string name="pref_eyePleaser_on">Eye-Pleaser ON</string>
    <string name="pref_subtitle_download_path_key">SubtitleDownloadPath</string>
    <string name="pref_subtitle_download_path">Subtitle Download Path</string>
    <string name="pref_subtitle_download_path_default_value">/data/data/app.nunc.com.staatsoperlivestreaming.nexplayersample/files/</string>
    <string name="pref_statistics_monitor">Statistics Monitor</string>
    <string name="pref_statistics_monitor_desc">Statistics Monitor</string>
    <string name="pref_statistics_monitor_on">StatisticsMontior on</string>
    <string name="pref_statistics_monitor_off">StatisticsMontior off</string>
    <string name="pref_colorSpace">Video color space</string>
    <string name="pref_loglevel">Log Level - for debugging</string>
    <string name="pref_replayMode">Replay Mode</string>
    <string name="pref_captionMode">Caption Mode</string>
    <string name="dolby_ac3_setting">Dolby AC3</string>
    <string name="dolby_ac3_post_processing">Post&#160;Processing</string>
    <string name="dolby_ac3_end_point">Dolby&#160;End&#160;Point</string>
    <string name="dolby_ac3_enhance_gain">Dolby&#160;Enhancement&#160;Gain</string>
    <string name="dolby_ac4_setting">Dolby AC4</string>
    <string name="dolby_ac4_virtualization">Virtualization</string>
    <string name="dolby_ac4_enhance_gain">Dolby&#160;Enhancement&#160;Gain</string>
    <string name="dolby_ac4_main_asso_pref">Main&#160;And&#160;Associated&#160;Audio</string>
    <string name="dolby_ac4_presentation_index">Dolby&#160;Presentation&#160;Index</string>
    <string name="pref_renderMode">RenderMode</string>
    <string name="pref_useExternalPD">Use External PD</string>
    <string name="pref_useExternalPD_desc">Use external Download Module</string>
    <string name="pref_useExternalPD_on">on External Download Module</string>
    <string name="pref_useExternalPD_off">off External Download Module</string>
    <string name="pref_prevent_webvtt">Enable WebVTT Mode</string>
    <string name="pref_prevent_webvtt_on">on Enable WebVTT Mode</string>
    <string name="pref_prevent_webvtt_off">Disable WebVTT Mode</string>
    <string name="pref_webvtt_waitopen">WEBVTT_WAITOPEN</string>
    <string name="pref_webvtt_waitopen_on">Wait open() when download WebVTT</string>
    <string name="pref_webvtt_waitopen_off">Do not wait open() when download WebVTT</string>
    <string name="pref_hls_runmode_stable">HLS_ABR_RUNMODE</string>
    <string name="pref_hls_runmode_stable_on">HLS ABR Run mode is stable</string>
    <string name="pref_hls_runmode_stable_off">HLS ABR Run mode is default</string>
    <string name="pref_prefer_language_audio_title">Input PreferLanguage Audio</string>
    <string name="pref_prefer_language_audio_key">prefer_language_audio</string>
    <string name="pref_prefer_language_text_title">Input PreferLanguage Text</string>
    <string name="pref_prefer_language_text_key">prefer_language_text</string>
    <string name="pref_cea608_ignore_textmode">Ignore text mode on CEA608</string>
    <string name="pref_cea608_ignore_textmode_on">Ignore text mode command</string>
    <string name="pref_cea608_ignore_textmode_off">Display default cea608</string>
    <string name="content_info">Content Info</string>
    <string name="pip">PIP</string>
    <string name="reset">Reset</string>
</resources>