<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="4dip">

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <CheckBox
            android:id="@+id/debug_checkbox"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pref_debug_protocol_logs_debug_title"
            android:checked="true"
        />
        
        <CheckBox
            android:id="@+id/rtp_checkbox"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pref_debug_protocol_logs_rtp_title"
            android:checked="false"
        />
    </LinearLayout>
   
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <CheckBox
            android:id="@+id/rtcp_checkbox"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pref_debug_protocol_logs_rtcp_title"
            android:checked="false"
        />
        
        <CheckBox
            android:id="@+id/frame_checkbox"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pref_debug_protocol_logs_frame_title"
            android:checked="false"
        />
    </LinearLayout>
    
</LinearLayout>
