<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dip">
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_margin="4dip">
		    <TextView
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:text="@string/dolby_ac3_post_processing"
			    android:layout_gravity="center"
			    android:textSize="20dip" />
		    <Spinner
			    android:id="@+id/dolby_ac3_post_processing_spinner"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:layout_weight="1" />
	    </LinearLayout>

	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_margin="4dip">
		    <TextView
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:text="@string/dolby_ac3_end_point"
			    android:layout_gravity="center"
			    android:textSize="20dip" />
		    <Spinner
			    android:id="@+id/dolby_ac3_end_point_spinner"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:layout_weight="1" />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_margin="4dip">
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="0dip"
			    android:layout_weight="1"
			    android:text="@string/dolby_ac3_enhance_gain"
			    android:textSize="20dip" />
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dip"
				android:layout_weight="1"
				android:orientation="horizontal">
				<SeekBar
					android:id="@+id/dolby_ac3_enhancement_gain_seekbar"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="5"
					android:max="12"
					android:indeterminate="false" />
				<TextView
					android:id="@+id/dolby_ac3_enhancement_gain_value"
					android:layout_width="0dip"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:text="0" />
			</LinearLayout>
	    </LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="4dip">
			<Button
				android:id="@+id/dolby_ac3_reset_button"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="4dip"
				android:text="@string/reset" />

			<Button
				android:id="@+id/dolby_ac3_save_button"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="4dip"
				android:text="@string/ok" />
		</LinearLayout>
    </LinearLayout>
</ScrollView>
